RESOLVED FIXED12899
Ordered lists not updating dynamically with new styles
https://bugs.webkit.org/show_bug.cgi?id=12899
Summary Ordered lists not updating dynamically with new styles
Steven Saviano
Reported 2007-02-26 10:20:48 PST
Steps: 1) Make an ordered list. (using <ol>) 2) Try to change the style of the lists via any known way: "type" attribute, style.listStyleType, change the classes on the element that have a list-style-type rule Expected Result: 1) The underlying html changes and the list redraws to display this style change. Actual Result: 1) The underlying html changes BUT the list does not redraw to display this style change. I tested this on r19843. NOTE: The styles of an unordered list do update correctly.
Attachments
Test case for changing ol style via type attribute, style.listTyleType, and list-style-type CSS rule (794 bytes, text/html)
2007-02-26 10:21 PST, Steven Saviano
no flags
Update list marker on marker type style change (34.74 KB, patch)
2007-02-26 12:49 PST, mitz
koivisto: review+
Test case for changing the "start" attribute of the ol tag. OBSOLETE - not for this bug (491 bytes, text/html)
2007-02-27 07:44 PST, Steven Saviano
no flags
Steven Saviano
Comment 1 2007-02-26 10:21:50 PST
Created attachment 13382 [details] Test case for changing ol style via type attribute, style.listTyleType, and list-style-type CSS rule
David Harrison
Comment 2 2007-02-26 10:40:08 PST
mitz
Comment 3 2007-02-26 12:49:01 PST
Created attachment 13385 [details] Update list marker on marker type style change Includes layout test and change log.
Antti Koivisto
Comment 4 2007-02-26 13:10:39 PST
Comment on attachment 13385 [details] Update list marker on marker type style change r=me
Mark Rowe (bdash)
Comment 5 2007-02-26 21:26:23 PST
Landed in r19875.
Steven Saviano
Comment 6 2007-02-27 07:43:55 PST
The ordered list is also not being redraw for the "start" attribute of the ol tag. New test case being added now.
Steven Saviano
Comment 7 2007-02-27 07:44:48 PST
Created attachment 13398 [details] Test case for changing the "start" attribute of the ol tag. OBSOLETE - not for this bug
Steven Saviano
Comment 8 2007-02-27 09:46:09 PST
Marking back as fixed and creating a new bug per Maciej's comments.
Beth Dakin
Comment 9 2007-02-27 16:02:14 PST
*** Bug 12911 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.